# GenAlgoImage

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bitmap.h  bitmap_loader.h  figures.h  genetic_algorithm.h  main.cpp
include/: cached_image.hpp  circle_props.hpp  config.hpp  config_loader.hpp  generated_image.hpp  image_generator.hpp  serializer.hpp  state.hpp  utils.hpp
res/: image_generator.conf  lena_30min.json  my_photo_20min.json  my_photo_2h.json  penguin.json  penguin_30min.json  penguin_v2.json  saved_state.json  saved_state_200.json  saved_state_20min.json  saved_state_300.json  saved_state_400.json  saved_state_500.json  saved_state_quick_100.json
src/: bitmap.h  circle_props.cpp  figures.h  generated_image.cpp  genetic_algorithm.h  image.h  image_generator.cpp  individual.h  main.cpp  sfml_image.h  sorted_container.h  timeit.h  utils.cpp
src/genetic_algorithm/: genetic_algorithm.cpp  genetic_algorithm.h  individual.cpp  individual.h
src/header_libs/: bitmap_image.hpp
src/image/: arash_partow_bitmap.h  arash_partow_bitmap_wrapper.cpp  arash_partow_bitmap_wrapper.h  bitmap.cpp  bitmap.h  image.h  sfml_image.h  sfml_image_wrapper.cpp  sfml_image_wrapper.h
src/utils/: container.h  shape.h  timer.h
